--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,15 @@ authors = ["0x484558 <root@0x484558.dev>"]
 license = "0BSD"
 description = "Spatially distancing fair queue. A kind of queue for sequential round-robin processing."
 repository = "https://github.com/0x484558/FairQueue"
-edition = "2021"
+edition = "2024"
 keywords = ["no_std", "queue", "data-structures", "algorithm"]
 categories = ["data-structures"]
 
 [dependencies]
+
+[dev-dependencies]
+criterion = "0.7"
+
+[[bench]]
+name = "fairqueue"
+harness = false
