--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,8 @@ jobs:
     name: Create GitHub Release
     runs-on: ubuntu-latest
     needs: publish-crate
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
 
