--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "fairqueue"
 version = "0.1.2"
-authors = ["0x484558 <root@0x484558.dev>"]
+authors = ["0x484558 <hex@0x484558.dev>"]
 license = "0BSD"
 description = "Spatially distancing fair queue. A kind of queue for sequential round-robin processing."
 repository = "https://github.com/0x484558/FairQueue"
